# SoftRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
engine/src/: CMakeLists.txt  Camera.h  Math.h  MyMath.h  Renderer.cpp  Renderer.h  Window.h  temp.cpp
test/: CMakeLists.txt  test.cpp
